--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,3 @@
-asgiref==3.4.1
-blinker==1.4
-brotli==1.0.9
-chardet==4.0.0
-colorama==0.4.4
-contextvars==2.4
-cryptography==3.4.7
-cx_Oracle==8.2.1
-Cython==0.29.24
-gevent==21.1.2
-importlib_metadata==4.6.1
-ipaddr==2.2.0
-keyring==23.0.1
-mx==3.2
-mypy_extensions==0.4.3
-numpy==1.21.1
-ordereddict==1.1
-pgdb==0.0.9
-protobuf==3.17.3
-pyOpenSSL==20.0.1
-pysqlcipher3==1.0.4
-pysqlite==2.8.3
-pytest==6.2.4
-pytest_xdist==2.3.0
-python-dotenv==0.18.0
-secrets==1.0.2
-simplejson==3.17.3
-sqlcipher3==0.4.5
-Sybase==0.35
-typing_extensions==3.10.0.0
-unicodedata2==13.0.0.post2
-watchdog==2.1.3
-wincertstore==0.2.1
+psycopg2_binary==2.9.1
+Flask==2.0.1
+psycopg2==2.9.1
