--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-psycopg2_binary==2.9.1
-Flask==2.0.1
-gunicorn==20.1.0
-authlib==0.15.4
-requests==2.26.0
-Werkzeug==2.2.2
-dotenv
+blinker==1.8.2
+click==8.1.7
+flask==3.0.3
+importlib-metadata==8.5.0
+itsdangerous==2.2.0
+jinja2==3.1.4
+MarkupSafe==2.1.5
+psycopg2==2.9.10
+werkzeug==3.0.6
+zipp==3.20.2
